versions/v2.9/modules/en/pages/rancher-admin/global-configuration/rke1-templates/enforce-templates.adoc
= Enforcing Templates
:page-languages: [en, zh]
:revdate: 2026-07-15
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/enforce-templates.adoc 
:product-path: rancher-admin/global-configuration/rke1-templates/enforce-templates.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-manage-rke1-templates: xref:rancher-admin/global-configuration/rke1-templates/manage-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-manage-rke1-templates: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/manage-rke1-templates.adoc
endif::[]

This section describes how template administrators can enforce templates in Rancher, restricting the ability of users to create clusters without a template.

By default, any standard user in Rancher can create clusters. But when RKE template enforcement is turned on,

* Only an administrator has the ability to create clusters without a template.
* All standard users must use an RKE template to create a new cluster.
* Standard users cannot create a cluster without using a template.

Users can only create new templates if the administrator xref:./creator-permissions.adoc#_allowing_a_user_to_create_templates[gives them permission.]

After a cluster is created with an RKE template, the cluster creator cannot edit settings that are defined in the template. The only way to change those settings after the cluster is created is to xref:./apply-templates.adoc#_updating_a_cluster_created_with_an_rke_template[upgrade the cluster to a new revision] of the same template. If cluster creators want to change template-defined settings, they would need to contact the template owner to get a new revision of the template. For details on how template revisions work, refer to the {xref-manage-rke1-templates}#_updating_a_template[documentation on revising templates.]

== Requiring New Clusters to Use an RKE Template

You might want to require new clusters to use a template to ensure that any cluster launched by a {xref-global-permissions}[standard user] will use the Kubernetes and/or Rancher settings that are vetted by administrators.

To require new clusters to use an RKE template, administrators can turn on RKE template enforcement with the following steps:

. Click *☰ > Global Settings*.
. Go to the `cluster-template-enforcement` setting. Click *⋮ > Edit Setting*.
. Set the value to *True* and click *Save*.
+

[IMPORTANT]
====
When the admin sets the `cluster-template-enforcement` to *True*, they also need to share the `clusterTemplates` with users so that users can select one of these templates to create the cluster.
====


*Result:* All clusters provisioned by Rancher must use a template, unless the creator is an administrator.

== Disabling RKE Template Enforcement

To allow new clusters to be created without an RKE template, administrators can turn off RKE template enforcement with the following steps:

. Click *☰ > Global Settings*.
. Go to the `cluster-template-enforcement` setting. Click *⋮ > Edit Setting*.
. Set the value to *False* and click *Save*.

*Result:* When clusters are provisioned by Rancher, they don't need to use a template.
